attempt to fix spacing on portfolio page

--- a/Assets/css/portfolio.css
+++ b/Assets/css/portfolio.css
@@ -133,8 +133,8 @@
         grid-template-columns: repeat(4, 1fr);
         grid-column-gap: 40px;
         grid-row-gap: 10px;
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     .portfoliodiv {
         grid-column: span 2;
